hphp/hack/test/typecheck/vec/vec_append_lvalue_bad.php.exp
File "vec_append_lvalue_bad.php", line 10, characters 4-9:
Array updates cannot be applied to function results. Use a local variable instead. (Typing[4454])
